plugins {
	id 'org.springframework.boot' version '2.4.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.automation'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

ext {
	set('testcontainersVersion', "1.15.1")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.h2database:h2'
	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'org.springframework.boot:spring-boot-starter-json'
	implementation 'com.google.code.gson:gson:2.8.6'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'io.rest-assured:rest-assured:4.2.0'
	testImplementation 'io.rest-assured:json-path:4.2.0'
	testImplementation 'io.rest-assured:xml-path:4.2.0'
	testImplementation 'org.hamcrest:hamcrest:2.2'
	testImplementation 'io.cucumber:cucumber-java:6.9.0'
	testImplementation 'io.cucumber:cucumber-junit:6.9.0'
	testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'

}

dependencyManagement {
	imports {
		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
	}
}

test {
	useJUnitPlatform()
	//systemProperty "cucumber.options", System.getProperty("cucumber.options")
}

tasks.withType(Test) {
	useJUnitPlatform()
	jvmArgs '--enable-preview'
}
